--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/recharts": "^1.8.29",
+    "@vercel/analytics": "^1.5.0",
     "chart.js": "^4.4.8",
     "framer-motion": "^12.4.7",
     "gray-matter": "^4.0.3",
