--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/recharts": "^1.8.29",
     "@vercel/analytics": "^1.5.0",
     "chart.js": "^4.4.8",
